--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -3,5 +3,6 @@
     "description" : "description" ,
     "en-name" : "English" ,
     "fr-name" : "French" ,
-    "ar-name" : "Arabic" 
-}
+    "ar-name" : "Arabic" ,
+    "es-name" : "Spain" 
+} 
